fix gap list

--- a/src/css/5-my-projects.css
+++ b/src/css/5-my-projects.css
@@ -30,7 +30,6 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   border-radius: 16px;
   width: 100%;
   height: auto;
-  margin-top: 40px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -62,6 +61,7 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 40px;
 }
 
 .project-item {
@@ -189,6 +189,10 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   max-width: 768px;
 }
 
+#project-list {
+  gap: 60px;
+}
+
   .my-projects-title {
     font-size: 108px;
     line-height: 1.14;
@@ -202,7 +206,6 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   }
 
     .project-image {
-      margin-top: 60px;
     }
 
   .project-technologies {
@@ -232,13 +235,16 @@ text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
   padding-right: 104px;
 }
 
+#project-list {
+  gap: 80px;
+}
+
   .my-projects-title {
     font-size: 108px;
     line-height: 1.14;
   }
 
     .project-image {
-      margin-top: 80px;
       min-width: 1008px;
       height: 578px;
     }
